# testapp

./: .gitignore  LICENSE  README.md  bindings.h  client.h  example.py  generated_bindings.dart  pubspec.yaml
.github/workflows/: build.yml  flutter_release.yml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/profile/: AndroidManifest.xml
codegen/: generate.dart  main_class.tmpl
ios/Runner.xcodeproj/: project.pbxproj
lib/: bindings.dart  extention_utils.dart  generated_bindings.dart  main.dart  my_app.dart  tdlib_bindings.dart
lib/app/: my_app.dart
lib/app/config/: config.dart  extention.dart
lib/app/data/model/: user_model.dart
lib/app/database/: database.dart  user_database.dart
lib/app/model/: user.dart  user.g.dart
lib/app/models/: user_model.dart  user_model.g.dart
lib/app/routes/: app_pages.dart  app_routes.dart
lib/app/tasks/: heavy_tasks.dart
lib/app/tdLibJson/: function.dart  object.dart  tdlib.dart  tdlib_core.dart  tdlib_interface.dart  tdlib_native.dart  tdlibjson.dart  tdlibjson_api.dart  test.dart
lib/app/tdlib/: function.dart  tdlibjson.dart
lib/app/utils/: utils.dart
lib/app/views/: home_drawer.dart
lib/app/widgets/: custom_widgets.dart
linux/: CMakeLists.txt
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  build_android.sh  makefile
rust/src/: api.rs  bindings.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs  main.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/runner/: Runner.rc
(+1851 files in other folders)
