[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
#walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
